--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,8 @@ bing_verify:
 # For external links add external: true
 links:
   - title: Acerca de mí
+    url: /acerca
+  - title: About Me
     url: /about
   - title: Articulos
     url: /articles
