Pequeños cambios atraves de toda la página para mejor lectura en español

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:            Ingeniero en Mecatrónica
+title:            robblack00_7
 description:      El blog de un ingeniero en mecatrónica.
 logo:             site-logo.png
 disqus_shortname: 
