--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ logo:             site-logo.png
 disqus_shortname: 
 search:           true
 #Change url to your domain. Leave localhost server or blank when working locally.
-url:              #http://robblack007.github.io
+url:              http://robblack007.github.io
 
 # Owner/author information
 owner:
