--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ owner:
 
 # Analytics and webmaster tools stuff goes here
 google_analytics:   UA-47826272-1
-google_verify:      
+google_verify:      <meta name="google-site-verification" content="tY4kjuWTQFnWNtzC4XOPR-d6CWNmFZvSHb1AhEJegxk" />
 # https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
 bing_verify:         
 
