--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title:            robblack00_7
 description:      El blog de un ingeniero en mecatrónica.
 logo:             site-logo.png
-disqus_shortname: 
+disqus_shortname: robblack007
 search:           true
 # Change url to your domain. Leave localhost server or blank when working locally.
 url:              http://robblack007.github.io
