Se corrige un error en la configuracion de disqus

--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ owner:
   name: Roberto Cadena Vega
   avatar: bio-photo.jpg
   email: robblack00_7@hotmail.com
-  disqus-shortname: robblack00_7
+  disqus-shortname: robblack007
   twitter: robblack00_7
   facebook: robblack007
   github: robblack007
